plugins/warp/src/snapshots/warp_ninja__tests___memicmp.snap
---
source: plugins/warp/src/lib.rs
expression: functions
---
{
    192: FunctionGUID {
        guid: cf6e80f2-69aa-5757-a06f-fb2e4866ab14,
    },
}
