plugins/warp/src/snapshots/warp_ninja__tests___strnicm.snap
---
source: plugins/warp/src/lib.rs
expression: functions
---
{
    192: FunctionGUID {
        guid: 7c350a2d-2282-5625-943e-009f317b8d2c,
    },
}
